LEARNCLJ-8: Added some beginnings of a DSL for CI modeled after jenkins